<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="16dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tv_sheet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        app:fontFamily="@font/poppins_bold"
        android:maxLines="1"
        android:textColor="@color/text_color_primary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="?attr/selectableItemBackground"
        app:fontFamily="@font/poppins_medium"
        android:paddingVertical="12dp"
        android:text="@string/open"
        android:textColor="@color/text_color_primary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/action_toggle_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        app:fontFamily="@font/poppins_medium"
        android:paddingVertical="12dp"
        android:text="@string/add_to_favorites"
        android:textColor="@color/text_color_primary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/action_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        app:fontFamily="@font/poppins_medium"
        android:paddingVertical="12dp"
        android:text="@string/share_file"
        android:textColor="@color/text_color_primary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/action_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        app:fontFamily="@font/poppins_medium"
        android:paddingVertical="12dp"
        android:text="@string/file_details"
        android:textColor="@color/text_color_primary"
        android:textSize="15sp" />

</LinearLayout>
