<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:id="@+id/llLanguageItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:background="@drawable/bg_lang_item_unselected"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="18dp"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/imgFlag"
            android:contentDescription="@string/image_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flag_english"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_weight="1"
            app:fontFamily="@font/plus_jakarta_sans_medium"
            android:text="@string/english"
            android:textColor="@color/text_color_primary"
            android:textDirection="ltr"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_checked"
            android:contentDescription="@string/icon_checked"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_check" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivHandPointer"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="end|center_vertical"
        android:layout_marginTop="-16dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/ic_hand_pointer"
        android:visibility="gone"
        android:contentDescription="@null" />

</LinearLayout>

